--- a/block-BJaail/code/index.html
+++ b/block-BJaail/code/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Add New Books</h1>
+        <p>You can add multiple books to your reading list, you can delete them and mark as read.</p>
+        <form action="" class="form">
+            <input type="text" name="bookName" placeholder="Name of the book">
+             <input type="text" name="bookAuthor" placeholder="Name of the author">
+            <input type="text" name="bookImage" placeholder="Book Poster Image URL">
+            <button type="submit" class="form_btn">Submit</button>
+        </form>
+    </div>
+    <div class="books">
+        <ul class="book_list">
+           
+        </ul>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
